--- a/views/index.jade
+++ b/views/index.jade
@@ -67,7 +67,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           ul#categories
             li.category
               h2 Sir Ken Robinson
-              a(href='pages/v1.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c5ff4ad649e1f984981ae')
                 img(src='images/1.jpg', alt='')
               p
                 | Sir Ken Robinson makes an entertaining and profoundly moving case for creating an education system that nurtures (rather than undermines) creativity. 
@@ -75,71 +75,71 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             li.category
               h2 Jill Bolte Taylor
               a(href='pages/v2.html')
-                img(src='images/2.jpg', alt='')
+                img(src='https://coen3463-m3t8.herokuapp.com/list/587c6d99397aad1d9483ab42', alt='')
               p
                 | Neuroanatomist Jill Bolte Taylor had an opportunity few brain scientists would wish for: One morning,she realized she was having a massive stroke. As it happened
             li.category
               h2 Pranav Mistry
-              a(href='pages/v3.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c6e22397aad1d9483ab43')
                 img(src='images/3.jpg', alt='')
               p
                 | At TEDIndia, Pranav Mistry demos several tools that help the physical world interact with the worldof data -- including a deep look at his SixthSense device and a new, paradigm-shifting paper "laptop."
             li.category
               h2 David Gallo
-              a(href='pages/v4.html')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c6e7c397aad1d9483ab44')
                 img(src='images/4.jpg', alt='')
               p
                 | David Gallo shows jaw-dropping footage of amazing sea creatures,ncluding a color-shifting cuttlefish, a perfectly camouflaged octopus.
             li.category
               h2 Pattie Maes
-              a(href='pages/v5.html')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c6ecb397aad1d9483ab45')
                 img(src='images/5.jpg', alt='')
               p
                 | from Pattie Maes' lab at MIT, spearheaded by Pranav Mistry -- was the buzz of TED. It's a wearable evice with a projector that paves the way for profound interaction with our environment.
             li.category
               h2 Tony Robbins
               a(href='pages/v6.html')
-                img(src='images/6.jpg', alt='')
+                img(src='http://coen3463-m3t8.herokuapp.com/list/587c6f66397aad1d9483ab46', alt='')
               p
                 | Tony Robbins' lab at ZET, spearheaded by Tony RObbins -- was the buzz of TED. It's a wearabledevice with a projector that paves the way for profound interaction with our environment.
             li.category
               h2 Simon Sinek
               a(href='pages/v7.html')
-                img(src='images/7.jpg', alt='')
+                img(src='http://coen3463-m3t8.herokuapp.com/list/587c6fbb397aad1d9483ab47', alt='')
               p
                 | Simon Sinex has been a great motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Steve Job
-              a(href='pages/v8.html')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c7020397aad1d9483ab48')
                 img(src='images/8.jpg', alt='')
               p
                 | Steve Job has been a great creator of APPLE Companythats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Hans Roslings
-              a(href='pages/v9.html')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c7079397aad1d9483ab49')
                 img(src='images/9.jpg', alt='')
               p
                 | Hans Rosling has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Brené Brown 
-              a(href='pages/v10.html')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c70de397aad1d9483ab4a')
                 img(src='images/10.jpg', alt='')
               p
                 | Brene Brown has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Dan Pink
-              a(href='pages/v11.html')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c713e397aad1d9483ab4b')
                 img(src='images/11.jpg', alt='')
               p
                 | Dan Pink has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Arthur Benjamin
-              a(href='pages/v12.html')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c7199397aad1d9483ab4c')
                 img(src='images/12.jpg', alt='')
               p
                 | Arthur Benjamin has been a great Motivational speaker thats why
@@ -147,7 +147,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             li.category
               h2 Elizabeth Gilbert
               a(href='pages/v13.html')
-                img(src='images/13.jpg', alt='')
+                img(src='http://coen3463-m3t8.herokuapp.com/list/587c71f2397aad1d9483ab4d', alt='')
               p
                 | Elizabeth Gilbert has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
