--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -10,7 +10,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
     title TOP TED TALKS | Category Gallery
     meta(http-equiv='Content-Type', content='text/html; charset=iso-8859-1')
     link(rel='stylesheet', href='/stylesheets/layout.css', type='text/css')
-    script(type='text/javascript', src='/javascriptsscripts/jquery.min.js')
+    script(type='text/javascript', src='/javascripts/jquery.min.js')
     // tabs
     script(type='text/javascript', src='/javascripts/jquery.ui.min.js')
     script(type='text/javascript').
