--- a/views/index.jade
+++ b/views/index.jade
@@ -226,9 +226,9 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           center
             ul#tabnav
               li
-                a(href='#tabs-1') Our Services
-              li
                 a(href='#tabs-2') Latest TED Talk Videos
+              li
+                a(href='#tabs-1') Our Services
               li
                 a(href='#tabs-3') Portfolio Example
               li
@@ -322,7 +322,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 p
                   | TED is a global community, welcoming people from every discipline and culture who seek a deeper understanding of the world.
                 p.readmore
-                  a(href='pages/style-demo.html') View Lists of TED Talks »
+                  a(href='https://coen3463-m3t8.herokuapp.com/tedtalkslist') View Lists of TED Talks »
           // ###########
           #tabs-4.tabcontainer
             h2 Our Mission: Spread ideas
