--- a/views/index.jade
+++ b/views/index.jade
@@ -74,8 +74,8 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 br
             li.category
               h2 Jill Bolte Taylor
-              a(href='pages/v2.html')
-                img(src='https://coen3463-m3t8.herokuapp.com/list/587c6d99397aad1d9483ab42', alt='')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c6d99397aad1d9483ab42'')
+                img(src='images/2.jpg', alt='')
               p
                 | Neuroanatomist Jill Bolte Taylor had an opportunity few brain scientists would wish for: One morning,she realized she was having a massive stroke. As it happened
             li.category
@@ -98,8 +98,8 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 | from Pattie Maes' lab at MIT, spearheaded by Pranav Mistry -- was the buzz of TED. It's a wearable evice with a projector that paves the way for profound interaction with our environment.
             li.category
               h2 Tony Robbins
-              a(href='pages/v6.html')
-                img(src='http://coen3463-m3t8.herokuapp.com/list/587c6f66397aad1d9483ab46', alt='')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c6f66397aad1d9483ab46')
+                img(src='images/6.jpg', alt='')
               p
                 | Tony Robbins' lab at ZET, spearheaded by Tony RObbins -- was the buzz of TED. It's a wearabledevice with a projector that paves the way for profound interaction with our environment.
             li.category
