--- a/views/index.jade
+++ b/views/index.jade
@@ -74,7 +74,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 br
             li.category
               h2 Jill Bolte Taylor
-              a(href='https://coen3463-m3t8.herokuapp.com/list/587c6d99397aad1d9483ab42'')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c6d99397aad1d9483ab42')
                 img(src='images/2.jpg', alt='')
               p
                 | Neuroanatomist Jill Bolte Taylor had an opportunity few brain scientists would wish for: One morning,she realized she was having a massive stroke. As it happened
