--- a/views/index.jade
+++ b/views/index.jade
@@ -104,8 +104,8 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 | Tony Robbins' lab at ZET, spearheaded by Tony RObbins -- was the buzz of TED. It's a wearabledevice with a projector that paves the way for profound interaction with our environment.
             li.category
               h2 Simon Sinek
-              a(href='pages/v7.html')
-                img(src='http://coen3463-m3t8.herokuapp.com/list/587c6fbb397aad1d9483ab47', alt='')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c6fbb397aad1d9483ab47')
+                img(src='images/7.jpg', alt='')
               p
                 | Simon Sinex has been a great motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
@@ -146,8 +146,8 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Elizabeth Gilbert
-              a(href='pages/v13.html')
-                img(src='http://coen3463-m3t8.herokuapp.com/list/587c71f2397aad1d9483ab4d', alt='')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c71f2397aad1d9483ab4d')
+                img(src='images/13.jpg', alt='')
               p
                 | Elizabeth Gilbert has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
