--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Ted Talks
+    title TED TALKS
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
