--- a/views/tedtalks.jade
+++ b/views/tedtalks.jade
@@ -39,10 +39,10 @@ html(xmlns='http://www.w3.org/1999/xhtml')
       #header.clear
         .fl_left
           h1
-            img(src='./images/logo.png', height='50px', width='180 px', a='', href='index')
+            img(src='./images/banner.png', height='50px', width='180 px', a='', href='index')
             p(style='font-family:arial;') Ideas Worth Spreading
         .fl_right
-          a(href='#')
+         
     // #######################################################################################################
     .wrapper.col1
       #topbar.clear
@@ -158,6 +158,6 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             | Copyright © 2016 - All Rights Reserved - 
             a(href='#') TOP TED TALKS
           p.fl_right
-            | Created by 
+            | Created by :
             a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
 
