--- a/views/tedtalks.jade
+++ b/views/tedtalks.jade
@@ -39,7 +39,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
       #header.clear
         .fl_left
           h1
-            img(src='./images/banner.png', height='50px', width='180 px', a='', href='index')
+            img(src='./images/logo.png', height='50px', width='180 px', a='', href='index')
             p(style='font-family:arial;') Ideas Worth Spreading
         .fl_right
          
@@ -56,7 +56,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           li.last
             a(href='gallery') Category Gallery
     center
-      img(src='./images/banner2.jpg')
+      img(src='./images/banner.png')
     br
     br
     // #######################################################################################################
