--- a/views/index.jade
+++ b/views/index.jade
@@ -153,63 +153,63 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Dan Gilbert
-              a(href='pages/v14.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7245397aad1d9483ab4e')
                 img(src='images/14.jpg', alt='')
               p
                 | Dan Gilbert has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Stephen Hawking
-              a(href='pages/v15.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c75f9c35a1122f052565d')
                 img(src='images/15.jpg', alt='')
               p
                 | Stephen Hawking has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Jeff Han
-              a(href='pages/v16.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7642c35a1122f052565e')
                 img(src='images/16.jpg', alt='')
               p
                 | Jeff Han has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Johnny Lee
-              a(href='pages/v17.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7696c35a1122f052565f')
                 img(src='images/17.jpg', alt='')
               p
                 | Johnny Lee has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Keith Barry
-              a(href='pages/v18.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c76ddc35a1122f0525660')
                 img(src='images/18.jpg', alt='')
               p
                 | Keith Barry has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Mary Roach
-              a(href='pages/v19.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7749c35a1122f0525661')
                 img(src='images/19.jpg', alt='')
               p
                 | Mary Roach has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Vijay Kumar
-              a(href='pages/v20.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7798c35a1122f0525662')
                 img(src='images/20.jpg', alt='')
               p
                 | Vijay Kumar has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Robyn  DeLuca
-              a(href='pages/v21.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c77e3c35a1122f0525663')
                 img(src='images/21.jpg', alt='')
               p
                 | Robyn  DeLuca has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Sophie Scot
-              a(href='pages/v22.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c782ec35a1122f0525664')
                 img(src='images/22.jpg', alt='')
               p
                 | Sophie Scot has been a great Motivational speaker thats why
