--- a/views/tedtalkslist.jade
+++ b/views/tedtalkslist.jade
@@ -159,5 +159,5 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           | Copyright © 2016 - All Rights Reserved - 
           a(href='#') TOP TED TALKS
         p.fl_right
-          | Created by 
+          | Created by :
           a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
