--- a/views/update.jade
+++ b/views/update.jade
@@ -15,7 +15,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
       #header.clear
         .fl_left
           h1
-            img(src='./images/banner.png', height='50px', width='180 px', a='', href='index')
+            img(src='/images/banner.png', height='50px', width='180 px', a='', href='index')
             p(style='font-family:arial;') Ideas Worth Spreading
         .fl_right
         
@@ -105,7 +105,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         .footbox
           h2
             | About Us 
-            img(src='./images/logo.png', height='50px', width='180 px', a='', href='index.html')
+            img(src='/images/logo.png', height='50px', width='180 px', a='', href='index.html')
           p
             | TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics
           p
@@ -166,5 +166,5 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           | Copyright © 2016 - All Rights Reserved - 
           a(href='#') TOP TED TALKS
         p.fl_right
-          | Created by 
+          | Created by :
           a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
