--- a/views/update.jade
+++ b/views/update.jade
@@ -15,7 +15,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
       #header.clear
         .fl_left
           h1
-            img(src='/images/banner.png', height='50px', width='180 px', a='', href='index')
+            img(src='/images/logo.png', height='50px', width='180 px', a='', href='index')
             p(style='font-family:arial;') Ideas Worth Spreading
         .fl_right
         
