--- a/views/tedtalkslist.jade
+++ b/views/tedtalkslist.jade
@@ -63,7 +63,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
               ul.commentlist
                 li.comment_odd
                   .author
-                    img.avatar(src='./images/demo/avatar.gif', width='32', height='32', alt='')
+                    img.avatar(src='./images/by1.jpg', width='32', height='32', alt='')
                     span.name
                       a(href='#') W. Edwards Deming
                     span.wrote wrote:
@@ -73,7 +73,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                     | Do schools kill creativity? Making an entire class write something they have no interest in and forcing them to have X amount of words. Yes. I would say it does. It kills the want to learn.
                 li.comment_even
                   .author
-                    img.avatar(src='./images/demo/avatar.gif', width='32', height='32', alt='')
+                    img.avatar(src='./images/by2.jpg', width='32', height='32', alt='')
                     span.name
                       a(href='#') Philip B. Crosby
                     span.wrote wrote:
@@ -82,7 +82,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                   p Anyone know about what different laughter types say about people﻿
                 li.comment_odd
                   .author
-                    img.avatar(src='./images/demo/avatar.gif', width='32', height='32', alt='')
+                    img.avatar(src='./images/by3.jpeg', width='32', height='32', alt='')
                     span.name
                       a(href='#') Walter Shewhart
                     span.wrote wrote:
