--- a/views/index.jade
+++ b/views/index.jade
@@ -74,8 +74,8 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 br
             li.category
               h2 Jill Bolte Taylor
-              a(href='pages/v2.html')
-                img(src='https://coen3463-m3t8.herokuapp.com/list/587c6d99397aad1d9483ab42', alt='')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c6d99397aad1d9483ab42')
+                img(src='images/2.jpg', alt='')
               p
                 | Neuroanatomist Jill Bolte Taylor had an opportunity few brain scientists would wish for: One morning,she realized she was having a massive stroke. As it happened
             li.category
@@ -98,14 +98,14 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 | from Pattie Maes' lab at MIT, spearheaded by Pranav Mistry -- was the buzz of TED. It's a wearable evice with a projector that paves the way for profound interaction with our environment.
             li.category
               h2 Tony Robbins
-              a(href='pages/v6.html')
-                img(src='http://coen3463-m3t8.herokuapp.com/list/587c6f66397aad1d9483ab46', alt='')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c6f66397aad1d9483ab46')
+                img(src='images/6.jpg', alt='')
               p
                 | Tony Robbins' lab at ZET, spearheaded by Tony RObbins -- was the buzz of TED. It's a wearabledevice with a projector that paves the way for profound interaction with our environment.
             li.category
               h2 Simon Sinek
-              a(href='pages/v7.html')
-                img(src='http://coen3463-m3t8.herokuapp.com/list/587c6fbb397aad1d9483ab47', alt='')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c6fbb397aad1d9483ab47')
+                img(src='images/7.jpg', alt='')
               p
                 | Simon Sinex has been a great motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
@@ -146,70 +146,70 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Elizabeth Gilbert
-              a(href='pages/v13.html')
-                img(src='http://coen3463-m3t8.herokuapp.com/list/587c71f2397aad1d9483ab4d', alt='')
+              a(href='http://coen3463-m3t8.herokuapp.com/list/587c71f2397aad1d9483ab4d')
+                img(src='images/13.jpg', alt='')
               p
                 | Elizabeth Gilbert has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Dan Gilbert
-              a(href='pages/v14.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7245397aad1d9483ab4e')
                 img(src='images/14.jpg', alt='')
               p
                 | Dan Gilbert has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Stephen Hawking
-              a(href='pages/v15.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c75f9c35a1122f052565d')
                 img(src='images/15.jpg', alt='')
               p
                 | Stephen Hawking has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Jeff Han
-              a(href='pages/v16.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7642c35a1122f052565e')
                 img(src='images/16.jpg', alt='')
               p
                 | Jeff Han has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Johnny Lee
-              a(href='pages/v17.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7696c35a1122f052565f')
                 img(src='images/17.jpg', alt='')
               p
                 | Johnny Lee has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Keith Barry
-              a(href='pages/v18.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c76ddc35a1122f0525660')
                 img(src='images/18.jpg', alt='')
               p
                 | Keith Barry has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Mary Roach
-              a(href='pages/v19.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7749c35a1122f0525661')
                 img(src='images/19.jpg', alt='')
               p
                 | Mary Roach has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Vijay Kumar
-              a(href='pages/v20.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c7798c35a1122f0525662')
                 img(src='images/20.jpg', alt='')
               p
                 | Vijay Kumar has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Robyn  DeLuca
-              a(href='pages/v21.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c77e3c35a1122f0525663')
                 img(src='images/21.jpg', alt='')
               p
                 | Robyn  DeLuca has been a great Motivational speaker thats why
                 | its not new that he get to talk to the most viewd Talk show the TED Talk
             li.category
               h2 Sophie Scot
-              a(href='pages/v22.html')
+              a(href='https://coen3463-m3t8.herokuapp.com/list/587c782ec35a1122f0525664')
                 img(src='images/22.jpg', alt='')
               p
                 | Sophie Scot has been a great Motivational speaker thats why
@@ -226,9 +226,9 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           center
             ul#tabnav
               li
-                a(href='#tabs-1') Our Services
-              li
                 a(href='#tabs-2') Latest TED Talk Videos
+              li
+                a(href='#tabs-1') Our Services
               li
                 a(href='#tabs-3') Portfolio Example
               li
@@ -322,7 +322,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 p
                   | TED is a global community, welcoming people from every discipline and culture who seek a deeper understanding of the world.
                 p.readmore
-                  a(href='pages/style-demo.html') View Lists of TED Talks »
+                  a(href='https://coen3463-m3t8.herokuapp.com/tedtalkslist') View Lists of TED Talks »
           // ###########
           #tabs-4.tabcontainer
             h2 Our Mission: Spread ideas
@@ -403,5 +403,5 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           | Copyright © 2016 - All Rights Reserved - 
           a(href='#') TOP TED TALKS
         p.fl_right
-          | Created by 
+          | Created by :
           a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
