--- a/views/tedtalkslist.jade
+++ b/views/tedtalkslist.jade
@@ -17,9 +17,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           h1
             img(src='./images/logo.png', height='50px', width='180 px', a='', href='index')
             p(style='font-family:arial;') Ideas Worth Spreading
-        .fl_right
-          a(href='#')
-            img(src='./images/demo/468x60.gif', alt='')
+          
     // #######################################################################################################
     .wrapper.col1
       #topbar.clear
@@ -160,5 +158,5 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           | Copyright © 2016 - All Rights Reserved - 
           a(href='#') TOP TED TALKS
         p.fl_right
-          | Created by 
+          | Created by :
           a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
