--- a/views/update.jade
+++ b/views/update.jade
@@ -15,13 +15,20 @@ html(xmlns='http://www.w3.org/1999/xhtml')
       #header.clear
         .fl_left
           h1
-            img(src='./images/logo.png', height='50px', width='180 px', a='', href='index')
+            img(src='/images/logo.png', height='50px', width='180 px', a='', href='/index')
             p(style='font-family:arial;') Ideas Worth Spreading
-        .fl_right
-          a(href='#')
-            img(src='./images/demo/468x60.gif', alt='')
     // #######################################################################################################
-
+    .wrapper.col1
+      #topbar.clear
+        ul#topnav
+          li
+            a(href='/index') Home
+          li.active
+            a(href='/tedtalkslist') List of TED Talks
+          li
+            a(href='/tedtalks') Add New
+          li.last
+            a(href='/gallery') Category Gallery
     // #######################################################################################################
     .wrapper.col2
       #container.clear
@@ -66,39 +73,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 button(type="submit") Submit
             br
             br
-            #comments
-              h2 Comments
-              ul.commentlist
-                li.comment_odd
-                  .author
-                    img.avatar(src='./images/demo/avatar.gif', width='32', height='32', alt='')
-                    span.name
-                      a(href='#') W. Edwards Deming
-                    span.wrote wrote:
-                  .submitdate
-                    a(href='#') August 4, 2009 at 8:35 am
-                  p
-                    | Do schools kill creativity? Making an entire class write something they have no interest in and forcing them to have X amount of words. Yes. I would say it does. It kills the want to learn.
-                li.comment_even
-                  .author
-                    img.avatar(src='./images/demo/avatar.gif', width='32', height='32', alt='')
-                    span.name
-                      a(href='#') Philip B. Crosby
-                    span.wrote wrote:
-                  .submitdate
-                    a(href='#') August 4, 2009 at 8:35 am
-                  p Anyone know about what different laughter types say about people﻿
-                li.comment_odd
-                  .author
-                    img.avatar(src='./images/demo/avatar.gif', width='32', height='32', alt='')
-                    span.name
-                      a(href='#') Walter Shewhart
-                    span.wrote wrote:
-                  .submitdate
-                    a(href='#') August 4, 2009 at 8:35 am
-                  p
-                    | very useful information. thank you. I wonder if laughter has been a naturally adaptive technique the poor and disparaged us in order to decompress from their circumstances. since they find the most grusome or cruel acts funny. when others don't.
-
+          
       // #######################################################################################################
     // #######################################################################################################
     .wrapper
@@ -106,7 +81,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         .footbox
           h2
             | About Us 
-            img(src='./images/logo.png', height='50px', width='180 px', a='', href='index.html')
+            img(src='/images/logo.png', height='50px', width='180 px', a='', href='index.html')
           p
             | TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics
           p
