--- a/views/update.jade
+++ b/views/update.jade
@@ -19,7 +19,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             img(src='/images/logo.png', height='50px', width='180 px', a='', href='/index')
             p(style='font-family:arial;') Ideas Worth Spreading
 =======
-            img(src='/images/logo.png', height='50px', width='180 px', a='', href='index')
+            img(src='/images/logo.png', height='50px', width='180 px', a='', href='/index')
             p(style='font-family:arial;') Ideas Worth Spreading
         .fl_right
         
