--- a/views/index.jade
+++ b/views/index.jade
@@ -234,7 +234,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
               li
                 a(href='#tabs-1') Our Services
               li
-                a(href='#tabs-3') Portfolio Example
+                a(href='#tabs-3') Portfolio 
               li
                 a(href='#tabs-4') Our Profile 
           #tabs-1.tabcontainer
