--- a/views/list.jade
+++ b/views/list.jade
@@ -47,6 +47,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
               p Title: #{list.title}
               p Uploader Name: #{list.uploader_name}
               p Youtube Page Link: #{list.youtube_page}
+              P Youtube Link: #{list.youtube_link}
               p Description: #{list.description}
               p Publication Date: #{list.pub_date}
               p Category: #{list.category}
