--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -131,7 +131,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                     img(src='./images/14.jpg', alt='S & T Category')
                 li.last
                   a(href='./images/22.jpg', rel='prettyPhoto[gallery2]', title='Image 6')
-                    img(src='./images/22.jpg', alt='S & T Categoryt')
+                    img(src='./images/22.jpg', alt='S & T Category')
                 li
                   a(href='./images/15.jpg', rel='prettyPhoto[gallery2]', title='Image 7')
                     img(src='./images/15.jpg', alt='S & T Category')
@@ -299,5 +299,5 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             | Copyright © 2016 - All Rights Reserved - 
             a(href='#') TOP TED TALKS
           p.fl_right
-            | Created by 
+            | Created by :
             a(target='_blank', href='http://coen3463-m1t8.herokuapp.com/') Jocelle L. Tanqui-on & Jobelle H. San Juan
