--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -212,7 +212,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                     img(src='./images/11.jpg', alt='Motivational Category')
                 li
                   a(href='./images/12.jpg', rel='prettyPhoto[gallery4]', title='Image 7')
-                    img(src='./images/12.jpg', alt='Motivational Categoryt')
+                    img(src='./images/12.jpg', alt='Motivational Category')
                 li
                   a(href='./images/19.jpg', rel='prettyPhoto[gallery4]', title='Image 8')
                     img(src='./images/19.jpg', alt='Motivational Category')
